# epic-curriculum

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_python_and_jupyter_intro.ipynb  neutrino_bonus_nsi_explorer.ipynb  neutrino_part1_oscillation_spectra.ipynb  neutrino_part2_parameter_explorer.ipynb
