[project]
name = "epic-curriculum"
version = "0.1.0"
description = "Introductory Python and Jupyter tutorial notebook for the EPIC summer program"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "jupyterlab>=4.1",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "nbval>=0.11",
    "pytest>=8",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
include = ["pyproject.toml", "notebooks/**/*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
per-file-ignores = { "*.ipynb" = ["E402"] }
